--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "range-slider",
+  "name": "range-slider-anna",
   "version": "0.0.1",
   "description": "ui component",
   "keywords": [
